--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                 <a class="btn btn-outline-secondary btn-social" href="#"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="col-12 mt-2 mb-4">
-                Copyright &copy; Shiwanshi
+                Copyright &copy; Snigdha
             </div>
         </div>
 
